--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,24 @@
 .App {
   text-align: center;
+  margin-top: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.MuiButton-root {
+  margin-left: 10px !important;
+  margin-top: 5px !important;
+}
+
+.MuiList-root {
+  margin: 30px auto !important;
+}
+
+.d-flex {
+  display: flex;
+  width: 100%;
+}
+
+.task-list {
+  width: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -32,6 +46,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
